-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.7
-
Fix Version/s: 0.6
-
Component/s: OCaml - Compiler
-
Labels:None
-
Patch Info:Patch Available
There are a couple of bugs in the current thrift that cause invalid OCaml to be generated. One problem is that floats can be written without a decimal point. The other is that the copy type in the mli file is wrong.
The attached patch fixes both of the issues.